Refactor FTP server to use VFS and improve JSON handling
Co-authored-by: kdsakash2001 <kdsakash2001@gmail.com>